<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:title="@string/menu_search_title"
        android:icon="@drawable/ic_search_24dp"
        app:actionLayout="@layout/search_view_layout"
        app:showAsAction="ifRoom|collapseActionView"/>
</menu>