...
    android:layout_height="@dimen/item_size"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="@dimen/spacing_normal_16"
    android:background="@android:color/white">

    <ImageView
        android:id="@+id/iv_selected"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        android:src="@drawable/ic_done_24dp"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:layout_marginEnd="@dimen/spacing_small_8"
...
