...
            android:layout_marginBottom="@dimen/spacing_small_8"
            android:visibility="gone">

        </com.google.android.material.chip.ChipGroup>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_user_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/item_user_list">

        </androidx.recyclerview.widget.RecyclerView>

...
